--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-config-next": "13.5.1",
     "googleapis": "^152.0.0",
     "input-otp": "^1.2.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
     "next": "^15.3.5",
     "next-themes": "^0.3.0",
